@@ -1,3 +1,4 @@
+- Update CPUID and change conditional logic.
 - Typo & ID names
 - Make compile on gcc w/ errors enabled.
 - Remove the '-x' option from the offending 'ld' command
